tests/fixtures/errors/assign_to_const.cpp
// Test: assign to const
int main() {
    const int x = 5;
    x = 10;
    return 0;
}
